# perma-mirror

./: .gitignore  README.md  mirror.sh  poll_for_warcs.py  pyproject.toml  remove-from-queue.py  remove_from_queue.py  requirements.txt
.circleci/: config.yml
.github/workflows/: tests.yml
perma_mirror/: poll_for_warcs.py  remove_from_queue.py
tests/: conftest.py  helpers.py  test_mirror.py
