[tool.poetry]
name = "perma_mirror"
version = "0.1.2"
description = "This program watches an SQS queue and downloads newly-created S3 objects"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-only"
repository = "https://github.com/harvard-lil/perma-mirror"

[tool.poetry.scripts]
poll-for-warcs = "perma_mirror.poll_for_warcs:main"
remove-from-queue = "perma_mirror.remove_from_queue:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
boto3 = "^1.17.21"
moto = {extras = ["sqs", "s3"], version = "^2.0.1"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
moto = "^2.0.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
